<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="T_Error" Id="{6e9c0c59-1542-0b98-2224-2648086575dc}">
    <Declaration><![CDATA[TYPE T_Error : ST_ERROR; END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>